--- a/useEffect.html
+++ b/useEffect.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+
 <body>
-<div id="app"></div>
+    <div id="app"></div>
+    <script>
+
+        let states = [];
+        const useState = (initialValue) => {
+
+
+
+        };
+
+        const useEffect = (callback, dependencies) => {
+
+        };
+
+        const render = () => {
+
+        };
+
+        const Counter = () => {
+            const [myObject, setMyObject] = useState({
+                name: 'ys',
+                age: 30
+            });
+
+            useEffect(() => { }, []);
+
+        }
+
+    </script>
 </body>
+
 </html>
